Simplified logic to return in html a random character using js

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h1>Song: Alexander Hamilton</h1>
-		Number of roles: <%= numOfRoles %>
+		Your role: <%= yourRole %>
 	</body>
 </html>
