--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,21 +1,11 @@
-<html>
-	<head>
-		<title>Who will you sing?</title>
-	</head>
-	<body>
-		<h1>Song: Alexander Hamilton</h1>
-		How many people are singing?
+			<h1>Song: Alexander Hamilton</h1>
+			<label>How many people are singing?</label>
+			<form method="POST" action="/numberOfSingers">
+				<select name="numberOfSingers">
+					<% for (var i = 1 ; i < numberOfCharacters+1 ; i++) { %>
+						<option value="<%= i %>"><%= i %></option>
 
-		<form method="POST" action="/numberOfSingers">
-			<select name="numberOfSingers">
-				<% for (var i = 1 ; i < numberOfCharacters+1 ; i++) { %>
-					<option value="<%= i %>"><%= i %></option>
-				
-				<% } %>
-			</select>
-			<button type="submit">Let's go!</button>
-		</form>
-		<p>
-		</p>
-	</body>
-</html>
+					<% } %>
+				</select>
+				<button type="submit">Let's go!</button>
+			</form>
