--- a/views/pages/assignments.ejs
+++ b/views/pages/assignments.ejs
@@ -8,8 +8,8 @@
 		<table>
 			<% assignments.forEach(function(el, index) { %>
 			<tr>
-				<td>#<%= el.name %></td>
-				<td> <% el.role = el.role.join().replace(/\,/g,', '); %> <%= el.role %> </td>
+				<td><%= el.name %></td>
+				<td><% el.role = el.role.join().replace(/\,/g,', '); %> <%= el.role %> </td>
 			</tr>
 
 			<% }); %>
