Adds support for all songs on the Hamilton Cast album
Also included is removing unnecessary assets

--- a/views/pages/assignments.ejs
+++ b/views/pages/assignments.ejs
@@ -3,7 +3,7 @@
 		<title>Your assignments?</title>
 	</head>
 	<body>
-		<h1>Song: Alexander Hamilton</h1>
+		<h1>Song: <%= song %></h1>
 
 		<table>
 			<% assignments.forEach(function(el, index) { %>
