Added some css so the assignments table doesn't span out to 100%

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,6 +33,10 @@
 			border-color: #666;
 		}
 
+		#assignments {
+				width: auto;
+		}
+		
 		input[type=text], .namesInput {
 			display: block;
 			width: inherit;
