--- a/views/pages/assignments.ejs
+++ b/views/pages/assignments.ejs
@@ -1,7 +1,7 @@
 
 		<h2><%= song %></h2>
 
-		<table>
+		<table id="assignments">
 			<% assignments.forEach(function(el, index) { %>
 			<tr>
 				<td><%= el.name %>: </td>
