Rephrased button label to be in the position.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,7 +17,7 @@
 				</select><br />
 				<label for="singerList" class="title">Who's singing: </label>
 				<input type="text" class="namesInput" name="singerList" placeholder="Alice, Sage, Ginger">
-				<input type="submit" class="button" value="Not throwin' away your shot!">
+				<input type="submit" class="button" value="Take your shot!">
 			</form>
 
 			<!-- <label>How many people are singing?</label>
